<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="slogan">Love texting again.</string>
    <string name="unknown_number">Unknown Number</string>
    <string name="popup_photo_CD">Photo</string>
    <string name="loading">Loading…</string>
    <string name="test">Test string</string>
    <string name="hint_contacts">Enter recipients</string>
    <string name="hint_search">Search something</string>
    <string name="hint_reply">Enter a message</string>
    <string name="hint_redeem">Enter code</string>
    <string name="hint_hex">Hex</string>
    <string name="new_message">New message</string>
    <string name="new_messages">new messages</string>
    <string name="failed_message">Message failed to send</string>
    <string name="failed_messages">messages failed to send</string>
    <string name="failed_messages_summary">Tap to view</string>
    <string name="quickcompose">QK Compose</string>
    <string name="quickcompose_detail">Click to send a message</string>
    <string name="welcome_start">Let\'s get started!</string>
    <string name="welcome_skip">SKIP</string>
    <string name="welcome_finish">FINISH</string>
    <string name="welcome_theme_title">Pick a color</string>
    <string name="welcome_theme_description">Any color.</string>
    <string name="welcome_night_description">Easy on the eyes.</string>
    <string name="welcome_night_hint">Toggle me</string>
    <string name="welcome_quickreply_title">QK Reply</string>
    <string name="welcome_quickreply_description">Reply to messages faster than ever.</string>
    <string name="welcome_quickreply_hint">Try it!</string>
    <string name="welcome_quickreply_message_1">Wow! Now wasn\'t that awesome? You can view your entire conversation at a glance. Tap outside the popup or press the checkmark to dismiss it.</string>
    <string name="welcome_quickreply_message_2">This is QK Reply. Now you can reply to messages from anywhere. Tap the expand button to see what happens next :)</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_clear">clear all</string>
    <string name="menu_show_all">Show all messages</string>
    <string name="menu_show_unread">Show unread messages</string>
    <string name="menu_open_thread">Open conversation</string>
    <string name="menu_forward">Forward message</string>
    <string name="menu_call">Call</string>
    <string name="menu_read">Mark as read</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_billing">Donate</string>
    <string name="menu_copy">Copy text</string>
    <string name="menu_changelog">"What's new"</string>
    <string name="menu_show_all_prefs">Show all</string>
    <string name="menu_show_fewer_prefs">Show fewer</string>
    <string name="details_title">Details</string>
    <string name="details_to">To</string>
    <string name="details_from">From</string>
    <string name="details_body">Body</string>
    <string name="details_date_sent">Date sent</string>
    <string name="details_date_received">Date received</string>
    <string name="rate_title">Like QKSMS?</string>
    <string name="rate_action">Rate</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_summary_appearance">Themes, fonts, colors, avatars, and more</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_summary_general">Delivery, message sending, formatting</string>
    <string name="pref_category_blocking">Message blocking</string>
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_summary_notifications">Sounds, LED, privacy</string>
    <string name="pref_category_mms">MMS</string>
    <string name="pref_category_summary_mms">Configure MMS (APNs), max size, group messaging</string>
    <string name="pref_category_quickreply">QK Reply</string>
    <string name="pref_category_summary_quickreply">QK Reply, popup options</string>
    <string name="pref_category_quickcompose">QK Compose</string>
    <string name="pref_category_summary_quickcompose">QK Compose, starred contacts</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_summary_about">Version, changelog, authors, thanks</string>
    <string name="pref_theme">Theme color</string>
    <string name="pref_theme_summary_alt">Tap to change theme</string>
    <string name="pref_icon">Icon color</string>
    <string name="pref_icon_summary">Tap to change the QKSMS icon color</string>
    <string name="pref_status_tint">Tinted status bar</string>
    <string name="pref_navigation_tint">Tinted navigation bar</string>
    <string name="pref_background">Background color</string>
    <string name="pref_background_summary">Tap to change background color</string>
    <string name="pref_bubbles">Message bubbles</string>
    <string name="pref_bubbles_summary">Tap to change message bubble preferences</string>
    <string name="pref_night">Night mode</string>
    <string name="pref_night_summary">Save battery and reduce eye strain</string>
    <string name="pref_night_amoled">Pure black background</string>
    <string name="pref_night_amoled_summary">Save extra battery on devices with AMOLED displays</string>
    <string name="pref_bubble_style_new">Use new bubble style</string>
    <string name="pref_color_sent">Color sent messages</string>
    <string name="pref_color_sent_summary">Color the background bubbles for outgoing messages</string>
    <string name="pref_color_received">Color received messages</string>
    <string name="pref_color_received_summary">Color the background bubbles for incoming messages</string>
    <string name="pref_hide_avatar_conversations">Hide conversation avatars</string>
    <string name="pref_hide_avatar_conversations_summary">Hide avatars for contacts in conversation list</string>
    <string name="pref_hide_avatar_sent">Hide sent message avatars</string>
    <string name="pref_hide_avatar_sent_summary">Hide your avatar for outgoing messages</string>
    <string name="pref_hide_avatar_received">Hide received message avatars</string>
    <string name="pref_hide_avatar_received_summary">Hide contact avatar for incoming messages</string>
    <string name="pref_font_family">Font family</string>
    <string name="pref_font_size">Font size</string>
    <string name="pref_font_weight">Font weight</string>
    <string name="pref_message_count">Message count</string>
    <string name="pref_message_count_summary">Show the number of messages for each conversation</string>
    <string name="pref_sent_timestamps">Sent timestamps</string>
    <string name="pref_sent_timestamps_summary">Show the timestamp for when a message was sent, not received</string>
    <string name="pref_force_timestamps">Force timestamps</string>
    <string name="pref_force_timestamps_summary">Enable timestamps for all messages</string>
    <string name="pref_key_timestamp_delay">New timestamp delay</string>
    <string name="pref_key_timestamp_delay_summary">The number of minutes which must elapse between two messages in order for a new timestamp to be shown.</string>
    <string name="pref_compose_favorites">Starred contacts</string>
    <string name="pref_compose_summary_favorites">Show your starred contacts in the QK Compose window, making them only a tap away</string>
    <string name="pref_prox_sensor_call">Proximity sensor</string>
    <string name="pref_prox_sensor_call_summary">While in a conversation, bring your phone to your ear to start a call</string>
    <string name="pref_delivery">Delivery confirmations</string>
    <string name="pref_delivery_summary">Confirm that messages were sent successfully</string>
    <string name="pref_delivery_toast">Show toast</string>
    <string name="pref_delivery_toast_summary">Show a short toast to indicate a message being delivered</string>
    <string name="pref_delivery_vibrate">Vibrate</string>
    <string name="pref_delivery_vibrate_summary">Vibrate on message delivery</string>
    <string name="pref_delete_old_messages">Delete old messages</string>
    <string name="pref_delete_old_messages_summary">Automatically delete messages once they\'re old enough</string>
    <string name="pref_delete_old_messages_unread">Unread messages</string>
    <string name="pref_delete_old_messages_unread_summary">Automatically delete unread messages after %s days</string>
    <string name="pref_delete_old_messages_read">Read messages</string>
    <string name="pref_delete_old_messages_read_summary">Automatically delete read messages after %s days</string>
    <string name="pref_yappy">Yappy integration</string>
    <string name="pref_endlessjabber_summary">Enable full support for Yappy</string>
    <string name="pref_blocked_conversations">Blocked conversations</string>
    <string name="pref_blocked_messages">Blocked messages</string>
    <string name="pref_blocked_conversations_summary">Long-press on a conversation and block to move to blocked inbox and stop notifications</string>
    <string name="pref_block_future">Block future messages</string>
    <string name="pref_block_future_summary">Add additional phone numbers to block</string>
    <string name="pref_should_i_answer">Should I Answer? Integration</string>
    <string name="pref_should_i_answer_summary">Automatically delete incoming messages from numbers which are blocked through Should I Answer?</string>
    <string name="pref_mobile_only">Mobile numbers</string>
    <string name="pref_mobile_only_summary">Only show mobile numbers in contact suggestions</string>
    <string name="pref_auto_emoji">Automatic emoji</string>
    <string name="pref_auto_emoji_summary">Replace text with image emoji</string>
    <string name="pref_enter_button">Enter button</string>
    <string name="pref_enter_button_summary">Tap to change keyboard enter button behavior</string>
    <string name="pref_compose_group">Group messaging</string>
    <string name="pref_compose_group_summary">When composing message to multiple people, send a group message instead of individual messages</string>
    <string name="pref_auto_download">Auto download MMS</string>
    <string name="pref_auto_download_summary">Automatically download MMS messages when they become available</string>
    <string name="pref_auto_data">Automatic data</string>
    <string name="pref_auto_data_summary">Turn on data automatically when sending or receiving MMS</string>
    <string name="pref_split">Split SMS</string>
    <string name="pref_split_summary">Split long messages into separate messages</string>
    <string name="pref_split_counter">Split counter</string>
    <string name="pref_split_counter_summary">Adds a counter to the front of each split message</string>
    <string name="pref_long_as_mms">Send long as MMS</string>
    <string name="pref_long_as_mms_summary">Send long messages as MMS instead of splitting them</string>
    <string name="pref_long_as_mms_after">Send long as MMS after</string>
    <string name="pref_long_as_mms_after_summary">Send long messages as MMS when they exceed the length of a number of messages</string>
    <string name="pref_return">Show return button</string>
    <string name="pref_return_summary">Show return key on keyboard instead of Emoji button</string>
    <string name="pref_garbage">骚扰拦截</string>
    <string name="pref_garbage_enable">启用骚扰拦截</string>
    <string name="pref_garbage_summary_enable">开启骚扰拦截，为你的短信保价护行</string>
    <string name="pref_garbage_rule">拦截规则</string>
    <string name="pref_garbage_white_list">白名单</string>
    <string name="pref_garbage_summary_white_list">白名单里的联系人会被直接放行</string>
    <string name="pref_garbage_black_list">黑名单</string>
    <string name="pref_garbage_summary_black_list">不会再收到来自他们的短信</string>
    <string name="pref_garbage_keyword">屏蔽关键词</string>
    <string name="pref_garbage_summary_keyword">包含这些内容的短信将被拦截</string>
</resources>